# dakara-feeder

./: .appveyor.yml  .codecov.yml  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  appveyor.yml  bump_version.sh  config.yaml.example  create_archive.sh  dakara_server.py  diff_generator.py  feed.py  feeder.py  pyproject.toml  requirements.txt  setup.cfg  song.py  test_dakara_server.py  test_diff_generator.py  test_directory_lister.py  test_feeder.py
.github/workflows/: ci.yml
dakara_feeder/: customization.py  dakara_feeder.py  dakara_server.py  diff_generator.py  directory_lister.py  exceptions.py  feeder.py  metadata_parser.py  similarity_calculator.py  song.py  subtitle_parser.py
dakara_feeder/tests/: test_customization.py  test_dakara_feeder.py  test_dakara_server.py  test_diff_generator.py  test_directory_lister.py  test_feeder.py  test_metadata_parser.py  test_similarity_calculator.py  test_subtitle_parser.py
dakara_feeder/tests/resources/: dummy.mkv
hooks/pre-commit.d/: 01_tests
src/dakara_feeder/: __init__.py  __main__.py  compatibility.py  config.py  customization.py  dakara_feeder.py  dakara_server.py  difference.py  directory.py  directory_lister.py  feed.py  json.py  metadata.py  metadata_parser.py  similarity_calculator.py  song.py  songs_feeder.py  subtitle_extractor.py  subtitle_parser.py  tags_feeder.py  utils.py  version.py  web_client.py  work_types_feeder.py  yaml.py  yaml_opener.py
src/dakara_feeder/commands/: __init__.py  base.py  create_config.py  feed.py  songs.py  tags.py  work_types.py
src/dakara_feeder/feeder/: songs.py  tags.py  work_types.py  works.py
src/dakara_feeder/resources/: feeder.yaml
src/dakara_feeder/subtitle/: extraction.py  parsing.py
tests/: test_commands_base.py  test_commands_feed.py  test_commands_work_types.py  test_config.py  test_customization.py  test_dakara_feeder.py  test_dakara_server.py  test_directory_lister.py  test_feed.py  test_metadata_parser.py  test_song.py  test_songs_feeder.py  test_subtitle_extractor.py  test_subtitle_parser.py  test_tags_feeder.py  test_utils.py  test_work_types_feeder.py  test_yaml_opener.py
tests/integration/: test_dakara_feeder.py  test_feeder_songs.py  test_feeder_works.py  test_metadata_parser.py  test_song_feeder.py  test_subtitle_extractor.py
tests/integration/resources/works/: correct_work_file.json
tests/resources/: dummy.mkv
tests/resources/filetype/: file.avi  file.flac  file.srt  file_upper.MKV
tests/resources/subtitles/: plain.txt
tests/unit/: test_commands_base.py  test_commands_create_config.py  test_commands_feed.py  test_commands_songs.py  test_commands_tags.py  test_commands_work_types.py  test_customization.py  test_dakara_feeder.py  test_dakara_server.py  test_diff_generator.py  test_directory_lister.py  test_feed.py  test_feeder_songs.py  test_feeder_tags.py  test_feeder_work_types.py  test_feeder_works.py  test_json.py  test_main.py  test_metadata_parser.py  test_similarity_calculator.py  test_song.py  test_song_feeder.py  test_subtitle_extractor.py  test_subtitle_parser.py  test_tags_feeder.py  test_utils.py  test_web_client.py  test_work_types_feeder.py  test_yaml.py  test_yaml_opener.py
