[metadata]
name = dakarafeeder
version = attr: dakara_feeder.version.__version__
author = Flore <flore.love@gmail.com>, Neraste <neraste.herr10@gmail.com>
description = External database feeder for the Dakara Project
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = MIT
url = https://github.com/DakaraProject/dakara-feeder
project_urls =
        Bug tracker=https://github.com/DakaraProject/dakara-feeder/issues
classifiers =
        License :: OSI Approved :: MIT License
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        Operating System :: OS Independent
        Environment :: Console
        Intended Audience :: Developers

[options]
package_dir =
        =src
packages = find:
# dependencies are pinned by interval
install_requires =
        dakarabase>=1.1.0,<1.2.0
        pymediainfo>=4.0,<5.0
        pysubs2>=0.2.4,<0.3.0
include_package_data = true

[options.extras_require]
# test dependencies are not pinned
tests =
        black; python_version >= '3.6'
        flake8
        coverage
        # codecov

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        dakara-feed = dakara_feeder.feed:main

[flake8]
max-line-length = 88
ignore = E203, W503

[coverage:run]
source = src
