[metadata]
name = dakarafeeder
version = 1.8.0-dev
author = Flore <flore.love@gmail.com>, Neraste <neraste.herr10@gmail.com>
description = External database feeder for the Dakara Project
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = MIT
url = https://github.com/DakaraProject/dakara-feeder
project_urls =
        Bug tracker=https://github.com/DakaraProject/dakara-feeder/issues
classifiers =
        License :: OSI Approved :: MIT License
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Operating System :: OS Independent
        Environment :: Console
        Intended Audience :: Developers

[options]
package_dir =
        =src
packages = find:
# dependencies are pinned by interval
install_requires =
        dakarabase>=1.3.0,<1.4.0
        filetype>=1.0.7,<1.1.0
        importlib-metadata>=0.23,<0.24
        importlib-resources>=3.2.0,<6.0.0
        pymediainfo>=4.0,<5.0
        pysubs2>=1.1.0,<1.2.0
include_package_data = true

[options.extras_require]
tests =
        black>=21.8b,<22.0
        codecov>=2.1.9,<2.2.0
        flake8>=3.8.3,<3.9.0
        isort>=5.9.3,<5.10.0
        pre-commit>=2.15.0,<2.16.0
        pytest-cov>=2.12.1,<2.13.0
        pytest>=6.2.3,<6.3.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        dakara-feeder = dakara_feeder.__main__:main

[flake8]
max-line-length = 88
ignore = E203, W503

[tool:pytest]
addopts = --cov=dakara_feeder

[isort]
profile = black
