[metadata]
name = dakarafeeder
version = attr:dakara_feeder.version.__version__
author = Flore <flore.love@gmail.com>, Neraste <neraste.herr10@gmail.com>
description = External database feeder for the Dakara Project
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = MIT
url = https://github.com/DakaraProject/dakara-feeder
project_urls =
        Bug tracker=https://github.com/DakaraProject/dakara-feeder/issues
classifiers =
        License :: OSI Approved :: MIT License
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Operating System :: OS Independent
        Environment :: Console
        Intended Audience :: Developers

[options]
package_dir =
        =src
packages = find:
# dependencies are pinned by interval
install_requires =
        dakarabase>=1.4.0,<1.5.0
        filetype>=1.0.10,<1.1.0
        importlib-resources>=5.6.0,<5.7.0
        pymediainfo>=5.1.0,<5.2.0
        pysubs2>=1.4.1,<1.5.0
include_package_data = true

[options.extras_require]
tests =
        black>=22.3.0,<22.4.0
        codecov>=2.1.12,<2.2.0
        flake8>=4.0.1,<4.1.0
        isort>=5.10.1,<5.11.0
        pdoc>=10.0.4,<10.1.0
        pre-commit>=2.17.0,<2.18.0
        pytest-cov>=3.0.0,<3.1.0
        pytest>=7.1.1,<7.2.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        dakara-feeder = dakara_feeder.__main__:main

[flake8]
max-line-length = 88
ignore = E203, W503

[tool:pytest]
addopts = --cov=dakara_feeder

[isort]
profile = black
